--- a/modules/admin-gui/resources/sysconfig/editoauthkey.xhtml
+++ b/modules/admin-gui/resources/sysconfig/editoauthkey.xhtml
@@ -55,25 +55,25 @@
             </h:inputText>
 
             <h:outputText value="#{web.text.OAUTHKEYCONFIGURATION_URL}"
-            	rendered="#{!systemConfigMBean.oauthKeyManager.oauthKeyEditor.typePingId}"/>
+            	rendered="#{!systemConfigMBean.oauthKeyManager.oauthKeyEditor.showUrls}"/>
             <h:outputText value="#{web.text.OAUTHKEYCONFIGURATION_AUTHORIZEURL}"
-            	rendered="#{systemConfigMBean.oauthKeyManager.oauthKeyEditor.typePingId}"/>
+            	rendered="#{systemConfigMBean.oauthKeyManager.oauthKeyEditor.showUrls}"/>
             <h:inputText value="#{systemConfigMBean.oauthKeyManager.oauthKeyEditor.url}" size="46" id="keyUrl"
                          disabled="#{systemConfigMBean.oauthKeyManager.oauthKeyEditor.viewMode}">
                 <f:converter converterId="trimConverter"/>
             </h:inputText>
             <h:outputText value="#{web.text.OAUTHKEYCONFIGURATION_TOKENURL}"
-            	rendered="#{systemConfigMBean.oauthKeyManager.oauthKeyEditor.typePingId}"/>
+            	rendered="#{systemConfigMBean.oauthKeyManager.oauthKeyEditor.showUrls}"/>
             <h:inputText value="#{systemConfigMBean.oauthKeyManager.oauthKeyEditor.tokenUrl}" size="46" id="keyTokenUrl"
                          disabled="#{systemConfigMBean.oauthKeyManager.oauthKeyEditor.viewMode}"
-                         rendered="#{systemConfigMBean.oauthKeyManager.oauthKeyEditor.typePingId}">
+                         rendered="#{systemConfigMBean.oauthKeyManager.oauthKeyEditor.showUrls}">
                 <f:converter converterId="trimConverter"/>
             </h:inputText>
             <h:outputText value="#{web.text.OAUTHKEYCONFIGURATION_LOGOUTURL}"
-            	rendered="#{systemConfigMBean.oauthKeyManager.oauthKeyEditor.typePingId}"/>
+            	rendered="#{systemConfigMBean.oauthKeyManager.oauthKeyEditor.showUrls}"/>
             <h:inputText value="#{systemConfigMBean.oauthKeyManager.oauthKeyEditor.logoutUrl}" size="46" id="keyLogoutUrl"
                          disabled="#{systemConfigMBean.oauthKeyManager.oauthKeyEditor.viewMode}"
-                         rendered="#{systemConfigMBean.oauthKeyManager.oauthKeyEditor.typePingId}">
+                         rendered="#{systemConfigMBean.oauthKeyManager.oauthKeyEditor.showUrls}">
                 <f:converter converterId="trimConverter"/>
             </h:inputText>
 
