--- a/modules/ra-gui/resources/enrollwithusername.xhtml
+++ b/modules/ra-gui/resources/enrollwithusername.xhtml
@@ -80,7 +80,7 @@
 								<h:outputText id="usernameField" value="#{enrollWithUsernameBean.username}" />
 							</h:panelGroup>
 							<h:panelGroup id="requestKeyAlgorithm" layout="block" styleClass="pure-control-group" rendered="#{enrollWithUsernameBean.preSetKeyAlgorithmRendered}">
-								<h:outputLabel for="requestKeyAlgorithmField" value="Key Algorithm"/>
+								<h:outputLabel for="requestKeyAlgorithmField" value="Last Key Algorithm"/>
 								<h:outputText id="requestKeyAlgorithmField" value="#{enrollWithUsernameBean.preSetKeyAlgorithm}"/>
 							</h:panelGroup>
 					</h:panelGroup>
@@ -88,7 +88,7 @@
 					<h:panelGroup layout="block" styleClass="internal-frame">
 							<!--Either render the fields for algorithm selection, or render the field for CSR upload/paste -->
 							<h:panelGroup id="enteredkeyAlg" layout="block" styleClass="pure-control-group"
-								rendered="#{!enrollWithUsernameBean.keyAlgorithmPreSet}">
+								rendered="#{enrollWithUsernameBean.selectKeyAlgorithmRendered}">
 								<h:outputLabel for="selectAlgorithmOneMenu" value="#{msg.enroll_key_algorithm}" />
 								<h:selectOneMenu id="selectAlgorithmOneMenu" styleClass="jsAutoFocusLast" value="#{enrollWithUsernameBean.selectedAlgorithm}">
 									<f:selectItems value="#{enrollWithUsernameBean.availableAlgorithmSelectItems}" />
@@ -176,6 +176,23 @@
 								</h:commandButton>
 							</h:panelGroup>
 					</h:panelGroup>
+					
+					<h:panelGroup layout="block" styleClass="internal-frame-black" rendered="#{enrollWithUsernameBean.requestIdInfoRendered}">
+						<h:panelGroup layout="block" styleClass="keygeneration-button-group">
+							<h:outputText value="#{msg.enroll_request_was_successfully_sent}" />
+						</h:panelGroup>
+						<h:panelGroup layout="block" styleClass="keygeneration-button-group">
+							<h:outputText value="#{msg.enroll_request_id}:&nbsp;" />
+							<h:outputText value="#{enrollWithUsernameBean.requestId}" />
+						</h:panelGroup>
+						<h:panelGroup layout="block" styleClass="keygeneration-button-group">
+							<h:outputLink value="enrollwithrequestid.xhtml" id="useRequestIdLink" styleClass="jsAutoFocusFirst">
+								<h:outputText value="#{msg.menu_pagetitle_enroll_use_request_id}&nbsp;&gt;&gt;" />
+								<f:param name="#{enrollWithUsernameBean.paramRequestId}" value="#{enrollWithUsernameBean.requestId}" />
+							</h:outputLink>
+						</h:panelGroup>
+                	</h:panelGroup>
+                
 					<h:panelGroup layout="block" id="navigationButtonGroup"
 					styleClass="navigation-button-group">
 					<h:commandButton id="resetButton" value="#{msg.generic_back}"
