ECA-9752: add in-line help texts about available CAs in EE profiles and access rules

--- a/modules/admin-gui/resources/ra/editendentityprofiles/endentityprofilepage.xhtml
+++ b/modules/admin-gui/resources/ra/editendentityprofiles/endentityprofilepage.xhtml
@@ -1096,6 +1096,8 @@
 					<h:panelGroup>
                         <h:outputLabel for="availableCA"
                             value="#{web.text.AVAILABLECAS}" />
+                        <br/>
+                        <h:outputText styleClass="smallHelp" value="#{web.text.AVAILABLECAS_EEPROFILE_HELP}"/> 
                     </h:panelGroup>
                 </h:panelGrid>
                 <h:panelGrid id="PGb2" columns="1">
